# CHOP

./: .gitignore  README.md
CODE/: CMakeLists.txt  chop.cpp  get.sh  make.sh
CODE/CMAKE/: make.sh
CODE/FRAMEWORK/: handle.hpp
CODE/LINUX/: clean.sh  configure.sh  configure_debug.sh  debug.sh  run.sh
CODE/MODEL/: file_table.cpp  file_table.hpp
CODE/SYSTEM/: gdk.hpp  glib.hpp  gtk.hpp  sigc.hpp  std.hpp
CODE/VIEW/: application_view.cpp  application_view.hpp  button_view.cpp  button_view.hpp  file_view.cpp  file_view.hpp
